--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>MealMaster Profile</title>
+<title>Profile | MealMaster</title>
 <!--<meta charset="UTF-8">-->
 <meta name="viewport" http-equiv="Content-Security-Policy" content="width=device-width, initial-scale=1">
 
@@ -36,7 +36,7 @@
                 sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
         </div>
 
-    <div class="share_with_me w3-margin-top w3-white w3-container w3-margin-bottom">
+    <div class="share_with_me w3-margin-top w3-white w3-container">
         <div class="w3-margin-bottom">
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Please share with me</b></p>
             <span class="w3-tag w3-teal w3-round">brocolli</span>
