--- a/views/ingredients.ejs
+++ b/views/ingredients.ejs
@@ -18,8 +18,8 @@
         <a href="/plan">Plan</a>
         <a href="/ingredients" class="active">Ingredients</a>
         <a href="/meals">Meals</a>
-        <a href="#">Basket</a>
-        <a href="#">Profile</a>
+        <a href="/basket">Basket</a>
+        <a href="/profile">Profile</a>
     </div>
     <div class="filter">
         <form action="" method="GET">
