--- a/styles/shoppinglist.css
+++ b/styles/shoppinglist.css
@@ -1,11 +1,106 @@
 body{
     margin-left: 3em;
 }
+
+section{
+    background-color: rgb(209,218,203);
+    border-radius: 25px;
+    max-width: 400px;
+    padding: 2em;
+    font-size: larger;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2em;
+
+}
 ul{
     list-style-type: none;
     padding-left: 0;
 }
 
-.shopping-list-check{
+.container{
+    display: block;
+    position: relative;
+    padding-left: 3em;
+    user-select: none;
+}
+a{
+    grid-column: 1/span 2;
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(118,144,76);
+    background-color: rgb(243,243,245);
+    text-decoration: none;
+    border: none;
+    text-align: center;
+    width: 48%;
+    height: 2em;
 
+}
+
+a:hover{
+    background-color: rgb(183,206,164);
+}
+li{
+
+    margin-top: 10px;
+}
+.container p{
+    margin: 0;
+}
+
+/* hide default checkbox */
+.container input{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.checkmark{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1.5em;
+    width: 1.5em;
+    margin: .25em;
+    background-color: white;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark{
+    background-color: grey;
+}
+
+/* When the checkbox is checked, change background */
+.container input:checked ~ .checkmark{
+    background-color: #73ab70;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after{
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after{
+    display: block;
+}
+
+/* fade the text when checked */
+.container input:checked ~ p{
+    color: #a7b49f;
+    transition: color 0.5s;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
 }
