--- a/styles/items.css
+++ b/styles/items.css
@@ -1,6 +1,3 @@
-body{
-    background-image: url("https://source.unsplash.com/4R1YpmGO52I");
-}
 .wrapper {
     display: grid;
     grid-template-columns:250px;
@@ -21,10 +18,11 @@ body{
 .nav {
     grid-area: nav;
     background-color: rgba(226, 147, 91, 0.81);
-    font-family:'GlacialIndifferenceRegular', sans-serif;
     align-self: center;
+    font-family:'GlacialIndifferenceRegular', sans-serif;
     width: 100vw;
 }
+
 .nav a {
     float: left;
     display: block;
@@ -44,28 +42,28 @@ body{
     background-color: rgba(255, 255, 255, 0.63);
 }
 
-.ingredients {
+.items {
     grid-area: main;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(177, 245, 193, 0.3);
 }
 
-.ingredients .ingredient{
+.items .item{
     display:inline-grid;
     padding:6px;
 }
 
-.ingredients .ingredient img{
+.items .item img{
     border-radius: 10px;
 }
 
-.ingredients .ingredient img:hover {
+.items .item img:hover {
     opacity: 0.7;
 }
 .filter {
     grid-area: filter;
-    color:white;
+    color:black;
     padding:10px;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(177, 245, 193, 0.3);
     height: 100vh;
 }
 
@@ -75,7 +73,7 @@ body{
     position: relative;
     border: 2px solid #cccac9;
     border-color: rgba(0,0,0,0.14);
-    background-color: AliceBlue ;   ;
+    background-color: AliceBlue ;
     font-size: 14px;
 }
 
