--- a/views/ingredients.ejs
+++ b/views/ingredients.ejs
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Meals</title>
-    <link rel="stylesheet" href="/styles/ingredients.css" type="text/css">
+    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="/styles/items.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="public/scripts/searchIngredient.js"></script>
 </head>
 <body>
-<header>
-</header>
-
 
 <div class="wrapper">
     <div class="nav">
@@ -35,9 +33,9 @@
         <input type="checkbox" name="Cereal" value="Cereal" onchange="document.filter.submit();">Cereal<br>
         </form>
     </div>
-    <div class="ingredients">
+    <div class="items">
         <% for(var i=0; i<ingredients.length; i++){%>
-        <div class="ingredient">
+        <div class="item">
             <a href="/addIngredient/<%=ingredients[i].id%>">
                 <p>
                     <img src="<%= ingredients[i].image%>" width="250" alt="<%= ingredients[i].name%>"><br>
