--- a/styles/items.css
+++ b/styles/items.css
@@ -50,14 +50,36 @@
 .items .item{
     display:inline-grid;
     padding:6px;
+    position: relative;
 }
-
 .items .item img{
     border-radius: 10px;
+
 }
 
 .items .item img:hover {
     opacity: 0.7;
+}
+p{
+    text-align: center;
+}
+.overlay {
+    position:relative;
+    top: -110px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1;
+    width: 83%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.item:hover .overlay {
+    opacity: 1;
 }
 .filter {
     grid-area: filter;
@@ -81,6 +103,13 @@
     padding: 3px;
     background: #ddd;
     font-size: 14px;
+    cursor: pointer;
+}
+
+.item button{
+    width: 100%;
+    padding: 5px 10px;
+    font-weight: bold;
     cursor: pointer;
 }
 
