refactor /views/public -> /public

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Login | MealMaster</title>
 
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../public/styles/login.css">
     <script src="public/scripts/login.js"> </script>
 </head>
 <body>
