--- a/views/plan.ejs
+++ b/views/plan.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Plan | MealMaster</title>
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
-    <link rel="stylesheet" href="/styles/plan.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/plan.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Permanent+Marker" rel="stylesheet">
 
 
