--- a/views/shoppinglist.ejs
+++ b/views/shoppinglist.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Shopping List | MealMaster</title>
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
-    <link rel="stylesheet" href="/styles/shoppinglist.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/shoppinglist.css" type="text/css">
 </head>
 <body>
 <section>
