--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
-    <link rel="stylesheet" href="../styles/basket.css" type="text/css">
+    <link rel="stylesheet" href="../public/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="../public/styles/basket.css" type="text/css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
