--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/style.css" type="text/css">
 </head>
 <body>
     <div class="icon-bar">
