--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Home | MealMaster</title>
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
-    <link rel="stylesheet" href="/styles/home.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="/public/styles/home.css" type="text/css">
 
 </head>
 <body>
