--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,8 +8,8 @@
 
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/styles/style.css" type="text/css">
-<link rel="stylesheet" href="/styles/profile.css" type="text/css">
+<link rel="stylesheet" href="/public/styles/style.css" type="text/css">
+<link rel="stylesheet" href="/public/styles/profile.css" type="text/css">
 
 <body>
     <nav>
