--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome | MealMaster</title>
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../public/styles/login.css">
 </head>
 <body>
 
