signup and login front end api requests

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
     <label>password: </label>
     <input type="password" name="password1" id="password1" required>
     <label>confirm password: </label>
-    <input type="password" name="password2" id="password2" onblur="checkPassMatch()" required>
+    <input type="password" name="password2" id="password2" required>
     <button type="button" onclick="verifyUserInfo()" id="signup">Sign up!</button>
     <a href="/login">Already a member?</a>
 </form>
