--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,11 +5,12 @@
     <title>Login | MealMaster</title>
 
     <link rel="stylesheet" href="../public/styles/login.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="public/scripts/login.js"> </script>
 </head>
 <body>
 
-<form method="get">
+<form method="post">
     <h1>MealMaster</h1>
     <label>email: </label>
     <input type="text" name="email" id="email"/>
