added logoff to nav, require all fields for sign up

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,4 +3,5 @@
     <a href="/plan" ><li <%if(active=="Plan"){%>class="active"<%}%> >Plan</li></a>
     <a href="/basket"><li <%if(active=="Basket"){%>class="active"<%}%> >Basket</li></a>
     <a href="/profile"><li <%if(active=="Profile"){%>class="active"<%}%> >Profile</li></a>
+    <a href="/logout"><li>Log Out</li></a>
 </ul>
