link shopping list to db

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -70,7 +70,7 @@
             if(typeof item !== 'undefined'){%>
             <li>
                 <img class="remove" src="public/images/icons24/clear-button.png" width="24" height="24">
-                <div class="shopping_list_item"><%=basket[i].item.ingredient.name%></div>
+                <div class="shopping_list_item"><%=basket[i].ingredient.name%></div>
                 <img class="expand" src="public/images/icons24/expand-button.png" width="24" height="24">
             </li>
          <%}
