--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -40,6 +40,7 @@ body{
     margin: 1em;
     padding: 1em;
     border-radius: 25px;
+    overflow: scroll;
 }
 
 #shoppingList h2{
@@ -123,6 +124,9 @@ body{
         grid-column: 4;
     }
 
+}
+img:hover {
+    opacity: 0.6;
 }
 
 .img_wrap{
