--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
     <a href="/meals">View all</a>
     <% for(var i=0; i<4; i++){%>
     <div class="img_wrap">
-       <a href="#" onclick="addToBasket(<%= JSON.stringify(meals[i])%>)">
+       <a href="#" onclick="addfromHome(<%= JSON.stringify(meals[i])%>)">
            <p>
             <img src="<%=meals[i].image%>" width="200" alt="<%=meals[i].name%>"
                  title="Add to my list">
@@ -46,7 +46,7 @@
 
     <% for(var i=0; i<4; i++){%>
         <div class="img_wrap" >
-            <a href="#" onclick="addToBasket(<%= JSON.stringify(ingredients[i])%>)">
+            <a href="#" onclick="addfromHome(<%= JSON.stringify(ingredients[i])%>)">
                 <p>
                 <img src="<%=ingredients[i].image%>" width="200" alt="<%=ingredients[i].name%>"
                  title="Add to my list">
@@ -69,9 +69,9 @@
         <% for (var i=0;i<basket.length; i++){
             if(typeof item !== 'undefined'){%>
             <li>
-                <img class="remove" src="public/images/icons24/clear-button.png" width="24" height="24">
+                <img onclick="DeleteItem(<%= JSON.stringify(basket[i].ingredient)%>)" class="remove" src="public/images/icons24/clear-button.png" width="24" height="24">
                 <div class="shopping_list_item"><%=basket[i].ingredient.name%></div>
-                <img class="expand" src="public/images/icons24/expand-button.png" width="24" height="24">
+                <img onclick="DeleteItem(<%= JSON.stringify(basket[i].ingredient)%>)" class="expand" src="public/images/icons24/expand-button.png" width="24" height="24">
             </li>
          <%}
         };%>
