--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="/public/styles/style.css" type="text/css">
     <link rel="stylesheet" href="/public/styles/items.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="public/scripts/searchMeal.js"></script>
-    <script type="text/javascript" src="public/scripts/filterMeal.js"></script>
     <script type="text/javascript" src="public/scripts/items.js"></script>
 
 </head>
@@ -24,7 +22,7 @@
         <a href="/profile">Profile</a>
     </div>
     <div class="filter">
-        <form action="" method="GET">
+        <form action="" method="GET" class="meal">
             <input type="text" class="search" name="search" placeholder="Search meal">
             <button type="submit">Search</button>
         </form>
@@ -32,14 +30,14 @@
 
         <div class="checkbox">
             <input type="checkbox" disabled="true" class="all" name="category" value="All" checked>All<br>
-            <input type="checkbox" class="category" name="category" value="American">American<br>
-            <input type="checkbox" class="category" name="category" value="Chinese">Chinese<br>
-            <input type="checkbox" class="category" name="category" value="French">French<br>
-            <input type="checkbox" class="category" name="category" value="German">German<br>
-            <input type="checkbox" class="category" name="category" value="Korean">Korean<br>
-            <input type="checkbox" class="category" name="category" value="Japanese">Japanese<br>
-            <input type="checkbox" class="category" name="category" value="Thai">Thai<br>
-            <button class="reset">Reset</button>
+            <input type="checkbox" class="category_meal" name="category" value="American">American<br>
+            <input type="checkbox" class="category_meal" name="category" value="Chinese">Chinese<br>
+            <input type="checkbox" class="category_meal" name="category" value="French">French<br>
+            <input type="checkbox" class="category_meal" name="category" value="German">German<br>
+            <input type="checkbox" class="category_meal" name="category" value="Korean">Korean<br>
+            <input type="checkbox" class="category_meal" name="category" value="Japanese">Japanese<br>
+            <input type="checkbox" class="category_meal" name="category" value="Thai">Thai<br>
+            <button class="reset_meal">Reset</button>
         </div>
 
     </div>
