--- a/views/home.ejs
+++ b/views/home.ejs
@@ -63,16 +63,16 @@
     <a href="#" onclick="clearList()">Clear</a>
     <div id="group-meals">
         <label>Group by meal: </label>
-        <input type="checkbox" id="groupMeals"/>
+        <input type="checkbox" onchange="groupByMeal(this,<%= JSON.stringify(basket)%>)"  id="groupMeals">
     </div>
-    <ul>
+    <ul class="list">
 
         <% for (var i=0;i<basket.length; i++){
             {%>
             <li>
                 <img onclick="DeleteItem(<%= JSON.stringify(basket[i].ingredient)%>)" class="remove" src="public/images/icons24/clear-button.png" width="24" height="24">
                 <div class="shopping_list_item"><%=basket[i].ingredient.name%></div>
-                <img onclick="DeleteItem(<%= JSON.stringify(basket[i].ingredient)%>)" class="expand" src="public/images/icons24/expand-button.png" width="24" height="24">
+                <!--<img onclick="DeleteItem(<%= JSON.stringify(basket[i].ingredient)%>)" class="expand" src="public/images/icons24/expand-button.png" width="24" height="24">-->
             </li>
          <%}
         };%>
