--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -85,9 +85,15 @@
                 url: '/addToBasket',
                 data: {ingredient: ingredient},
                 success: function (addedItem) {
-                    var name = addedItem.name;
-                    var id = addedItem.id;
-                    var shelfLife = addedItem.shelfLife / 7 * 100;
+                    var name = addedItem.ingredient.name;
+                    var id = addedItem.ingredient.id;
+                    // var shelfLife = MathsaddedItem.shelfLife / 7 * 100;
+
+                    var today = new Date();
+                    var expiry = new Date(Date.parse(addedItem.expiryDate));
+                    var shelfLife = Math.floor(Math.abs(parseInt(expiry.getDate()) - parseInt(today.getDate()))/7 * 100);
+
+
                     var html =
                         "<tr data-id=" + id + "><td class=\"ingredient_name\"><input type='button' class=\"delete_button\" value='-'  />" + " " + name +
                         "</td><td class=\"life_bar_track\">" +
