hide Profile link from navbar

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,6 +2,6 @@
     <a href="/home"><li <%if(active=="Home"){%>class="active"<%}%> >Home</li></a>
     <a href="/plan" ><li <%if(active=="Plan"){%>class="active"<%}%> >Plan</li></a>
     <a href="/basket"><li <%if(active=="Basket"){%>class="active"<%}%> >Basket</li></a>
-    <a href="/profile"><li <%if(active=="Profile"){%>class="active"<%}%> >Profile</li></a>
+    <!--<a href="/profile"><li <%if(active=="Profile"){%>class="active"<%}%> >Profile</li></a> -->
     <a href="/logout"><li>Log Out</li></a>
 </ul>
