--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -69,6 +69,10 @@ body{
     float: right;
     top: 50%;
 }
+#shoppingList li .fold{
+    float: right;
+    top: 50%;
+}
 
 #shoppingList li .remove{
     float: left;
@@ -153,4 +157,11 @@ img:hover {
 .img_wrap p{
     margin: 0;
     line-height: 2em;
+}
+
+.collapse {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
 }
