--- a/views/shoppinglist.ejs
+++ b/views/shoppinglist.ejs
@@ -16,7 +16,7 @@
             <% for (var element of list){%>
             <li>
                 <label class="container">
-                    <input type="checkbox" name="<%=element.ingredient.id%>"\>
+                    <input type="checkbox" name="<%=element.ingredient.id%>">
                     <span class = "checkmark"></span>
                     <p><%=element.ingredient.name%></p>
                 </label>
